// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allow double dispatch when kind === "load": 1 - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/first",
    "search": "",
    "state": Object {},
    "url": "/first",
  },
]
`;

exports[`allow double dispatch when kind === "load": 1 - history_index 1`] = `0`;

exports[`allow double dispatch when kind === "load": 1 - response 1`] = `
Object {
  "basename": "",
  "hash": "",
  "location": Object {
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
    ],
    "from": null,
    "index": 1,
    "kind": "push",
    "length": 2,
    "pathname": "/first",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
      ],
      "hash": "",
      "index": 0,
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/first",
      "pop": false,
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first",
    },
    "scene": "",
    "search": "",
    "status": 200,
    "url": "/first",
  },
  "params": Object {},
  "query": Object {},
  "state": Object {},
  "type": "FIRST",
}
`;

exports[`allow double dispatch when kind === "load": 1 - routes - FIRST - beforeEnter 1`] = `1`;

exports[`allow double dispatch when kind === "load": 1 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`allow double dispatch when kind === "load": 1 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`allow double dispatch when kind === "load": 1 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
    ],
    "from": null,
    "hash": "",
    "index": 0,
    "kind": "load",
    "length": 1,
    "params": Object {},
    "pathname": "/first",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [],
      "hash": "",
      "index": -1,
      "kind": "",
      "length": 0,
      "params": Object {},
      "pathname": "",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "type": "",
      "url": "",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "FIRST",
    "universal": false,
    "url": "/first",
  },
  "title": "FIRST",
}
`;

exports[`allow double dispatch when kind === "load": 1 - title 1`] = `"FIRST"`;

exports[`allow double dispatch when kind === "load": firstRoute - /first - 1 - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/first",
    "search": "",
    "state": Object {},
    "url": "/first",
  },
]
`;

exports[`allow double dispatch when kind === "load": firstRoute - /first - 1 - history_index 1`] = `0`;

exports[`allow double dispatch when kind === "load": firstRoute - /first - 1 - initial_state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
    ],
    "hash": "",
    "index": 0,
    "kind": "init",
    "length": 1,
    "params": Object {},
    "pathname": "/first",
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [],
      "hash": "",
      "index": -1,
      "kind": "",
      "length": 0,
      "params": Object {},
      "pathname": "",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "type": "",
      "universal": false,
      "url": "",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "type": "FIRST",
    "universal": false,
    "url": "/first",
  },
  "title": "@@redux/INIT",
}
`;

exports[`allow double dispatch when kind === "load": firstRoute - /first - 1 - response 1`] = `
Object {
  "basename": "",
  "hash": "",
  "location": Object {
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
    ],
    "from": null,
    "index": 0,
    "kind": "load",
    "length": 1,
    "pathname": "/first",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [],
      "hash": "",
      "index": -1,
      "kind": "",
      "length": 0,
      "params": Object {},
      "pathname": "",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "type": "",
      "url": "",
    },
    "scene": "",
    "search": "",
    "status": 200,
    "url": "/first",
  },
  "params": Object {},
  "query": Object {},
  "state": Object {},
  "type": "FIRST",
}
`;

exports[`allow double dispatch when kind === "load": firstRoute - /first - 1 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
    ],
    "from": null,
    "hash": "",
    "index": 0,
    "kind": "load",
    "length": 1,
    "params": Object {},
    "pathname": "/first",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [],
      "hash": "",
      "index": -1,
      "kind": "",
      "length": 0,
      "params": Object {},
      "pathname": "",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "type": "",
      "url": "",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "FIRST",
    "universal": false,
    "url": "/first",
  },
  "title": "FIRST",
}
`;

exports[`allow double dispatch when kind === "load": firstRoute - /first - 1 - title 1`] = `"FIRST"`;

exports[`do NOT dispatch actions with identical URLs more than once 1`] = `
Object {
  "basename": "",
  "hash": "bla",
  "location": Object {
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
      Object {
        "basename": "",
        "hash": "bla",
        "key": "345678",
        "pathname": "/second/foo",
        "search": "foo=bar",
        "state": Object {},
        "url": "/second/foo?foo=bar#bla",
      },
      Object {
        "basename": "",
        "hash": "bla",
        "key": "345678",
        "pathname": "/second/foo",
        "search": "foo=bar",
        "state": Object {},
        "url": "/second/foo?foo=bar#bla",
      },
    ],
    "from": null,
    "index": 2,
    "kind": "push",
    "length": 3,
    "pathname": "/second/foo",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
        Object {
          "basename": "",
          "hash": "bla",
          "key": "345678",
          "pathname": "/second/foo",
          "search": "foo=bar",
          "state": Object {},
          "url": "/second/foo?foo=bar#bla",
        },
      ],
      "hash": "bla",
      "index": 1,
      "kind": "push",
      "length": 2,
      "params": Object {
        "param": "foo",
      },
      "pathname": "/second/foo",
      "pop": false,
      "query": Object {
        "foo": "bar",
      },
      "scene": "",
      "search": "foo=bar",
      "state": Object {},
      "status": 200,
      "type": "SECOND",
      "url": "/second/foo?foo=bar#bla",
    },
    "scene": "",
    "search": "foo=bar",
    "status": 200,
    "url": "/second/foo?foo=bar#bla",
  },
  "params": Object {
    "param": "foo",
  },
  "query": Object {
    "foo": "bar",
  },
  "state": Object {},
  "type": "SECOND",
}
`;

exports[`do NOT dispatch actions with identical URLs more than once: {"type":"SECOND","params":{"param":"foo"},"query":{"foo":"bar"},"hash":"bla"} - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/first",
    "search": "",
    "state": Object {},
    "url": "/first",
  },
  Object {
    "basename": "",
    "hash": "bla",
    "key": "345678",
    "pathname": "/second/foo",
    "search": "foo=bar",
    "state": Object {},
    "url": "/second/foo?foo=bar#bla",
  },
]
`;

exports[`do NOT dispatch actions with identical URLs more than once: {"type":"SECOND","params":{"param":"foo"},"query":{"foo":"bar"},"hash":"bla"} - history_entries 2`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/first",
    "search": "",
    "state": Object {},
    "url": "/first",
  },
  Object {
    "basename": "",
    "hash": "bla",
    "key": "345678",
    "pathname": "/second/foo",
    "search": "foo=bar",
    "state": Object {},
    "url": "/second/foo?foo=bar#bla",
  },
]
`;

exports[`do NOT dispatch actions with identical URLs more than once: {"type":"SECOND","params":{"param":"foo"},"query":{"foo":"bar"},"hash":"bla"} - history_index 1`] = `1`;

exports[`do NOT dispatch actions with identical URLs more than once: {"type":"SECOND","params":{"param":"foo"},"query":{"foo":"bar"},"hash":"bla"} - history_index 2`] = `1`;

exports[`do NOT dispatch actions with identical URLs more than once: {"type":"SECOND","params":{"param":"foo"},"query":{"foo":"bar"},"hash":"bla"} - response 1`] = `
Object {
  "basename": "",
  "hash": "bla",
  "location": Object {
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
      Object {
        "basename": "",
        "hash": "bla",
        "key": "345678",
        "pathname": "/second/foo",
        "search": "foo=bar",
        "state": Object {},
        "url": "/second/foo?foo=bar#bla",
      },
    ],
    "from": null,
    "index": 1,
    "kind": "push",
    "length": 2,
    "pathname": "/second/foo",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
      ],
      "hash": "",
      "index": 0,
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/first",
      "pop": false,
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first",
    },
    "scene": "",
    "search": "foo=bar",
    "status": 200,
    "url": "/second/foo?foo=bar#bla",
  },
  "params": Object {
    "param": "foo",
  },
  "query": Object {
    "foo": "bar",
  },
  "state": Object {},
  "type": "SECOND",
}
`;

exports[`do NOT dispatch actions with identical URLs more than once: {"type":"SECOND","params":{"param":"foo"},"query":{"foo":"bar"},"hash":"bla"} - response 2`] = `
Object {
  "basename": "",
  "hash": "bla",
  "location": Object {
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
      Object {
        "basename": "",
        "hash": "bla",
        "key": "345678",
        "pathname": "/second/foo",
        "search": "foo=bar",
        "state": Object {},
        "url": "/second/foo?foo=bar#bla",
      },
      Object {
        "basename": "",
        "hash": "bla",
        "key": "345678",
        "pathname": "/second/foo",
        "search": "foo=bar",
        "state": Object {},
        "url": "/second/foo?foo=bar#bla",
      },
    ],
    "from": null,
    "index": 2,
    "kind": "push",
    "length": 3,
    "pathname": "/second/foo",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
        Object {
          "basename": "",
          "hash": "bla",
          "key": "345678",
          "pathname": "/second/foo",
          "search": "foo=bar",
          "state": Object {},
          "url": "/second/foo?foo=bar#bla",
        },
      ],
      "hash": "bla",
      "index": 1,
      "kind": "push",
      "length": 2,
      "params": Object {
        "param": "foo",
      },
      "pathname": "/second/foo",
      "pop": false,
      "query": Object {
        "foo": "bar",
      },
      "scene": "",
      "search": "foo=bar",
      "state": Object {},
      "status": 200,
      "type": "SECOND",
      "url": "/second/foo?foo=bar#bla",
    },
    "scene": "",
    "search": "foo=bar",
    "status": 200,
    "url": "/second/foo?foo=bar#bla",
  },
  "params": Object {
    "param": "foo",
  },
  "query": Object {
    "foo": "bar",
  },
  "state": Object {},
  "type": "SECOND",
}
`;

exports[`do NOT dispatch actions with identical URLs more than once: {"type":"SECOND","params":{"param":"foo"},"query":{"foo":"bar"},"hash":"bla"} - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`do NOT dispatch actions with identical URLs more than once: {"type":"SECOND","params":{"param":"foo"},"query":{"foo":"bar"},"hash":"bla"} - routes - NEVER_USED_PATHLESS - thunk 2`] = `0`;

exports[`do NOT dispatch actions with identical URLs more than once: {"type":"SECOND","params":{"param":"foo"},"query":{"foo":"bar"},"hash":"bla"} - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`do NOT dispatch actions with identical URLs more than once: {"type":"SECOND","params":{"param":"foo"},"query":{"foo":"bar"},"hash":"bla"} - routes - REDIRECTED - onComplete 2`] = `0`;

exports[`do NOT dispatch actions with identical URLs more than once: {"type":"SECOND","params":{"param":"foo"},"query":{"foo":"bar"},"hash":"bla"} - routes - SECOND - beforeEnter 1`] = `1`;

exports[`do NOT dispatch actions with identical URLs more than once: {"type":"SECOND","params":{"param":"foo"},"query":{"foo":"bar"},"hash":"bla"} - routes - SECOND - beforeEnter 2`] = `1`;

exports[`do NOT dispatch actions with identical URLs more than once: {"type":"SECOND","params":{"param":"foo"},"query":{"foo":"bar"},"hash":"bla"} - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
      Object {
        "basename": "",
        "hash": "bla",
        "key": "345678",
        "pathname": "/second/foo",
        "search": "foo=bar",
        "state": Object {},
        "url": "/second/foo?foo=bar#bla",
      },
    ],
    "from": null,
    "hash": "bla",
    "index": 1,
    "kind": "push",
    "length": 2,
    "params": Object {
      "param": "foo",
    },
    "pathname": "/second/foo",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
      ],
      "hash": "",
      "index": 0,
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/first",
      "pop": false,
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first",
    },
    "query": Object {
      "foo": "bar",
    },
    "scene": "",
    "search": "foo=bar",
    "state": Object {},
    "status": 200,
    "type": "SECOND",
    "universal": false,
    "url": "/second/foo?foo=bar#bla",
  },
  "title": "SECOND",
}
`;

exports[`do NOT dispatch actions with identical URLs more than once: {"type":"SECOND","params":{"param":"foo"},"query":{"foo":"bar"},"hash":"bla"} - state 2`] = `
Object {
  "location": Object {
    "basename": "",
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
      Object {
        "basename": "",
        "hash": "bla",
        "key": "345678",
        "pathname": "/second/foo",
        "search": "foo=bar",
        "state": Object {},
        "url": "/second/foo?foo=bar#bla",
      },
    ],
    "from": null,
    "hash": "bla",
    "index": 1,
    "kind": "push",
    "length": 2,
    "params": Object {
      "param": "foo",
    },
    "pathname": "/second/foo",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
      ],
      "hash": "",
      "index": 0,
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/first",
      "pop": false,
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first",
    },
    "query": Object {
      "foo": "bar",
    },
    "scene": "",
    "search": "foo=bar",
    "state": Object {},
    "status": 200,
    "type": "SECOND",
    "universal": false,
    "url": "/second/foo?foo=bar#bla",
  },
  "title": "SECOND",
}
`;

exports[`do NOT dispatch actions with identical URLs more than once: {"type":"SECOND","params":{"param":"foo"},"query":{"foo":"bar"},"hash":"bla"} - title 1`] = `"SECOND"`;

exports[`do NOT dispatch actions with identical URLs more than once: {"type":"SECOND","params":{"param":"foo"},"query":{"foo":"bar"},"hash":"bla"} - title 2`] = `"SECOND"`;
